--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <div class="title">
             <a href="tulyacss.github.io">
-                <img src="assets/img/blacktext.png">
+                <img src="assets/blacktext.png">
             </a>
         </div>
         <div class="menu">
