--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
             <a href="#">Components</a>
         </div>
     </div>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="heading">TulyaCSS <span class="little">A new CSS and JS Library</span></h1>
+            <p>
+                Create a beatiful web site. That's why we created the TulyaCSS.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
