--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TulyaCSS</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" ref="assets/logo.png">
 </head>
 <body>
     <div class="navbar">
